force-app/main/default/objects/ContactContactRelation.object
<CustomObject>
    <fields>
        <fullName>Explanation__c</fullName>
        <formula>Contact.FirstName&amp;&quot; &quot;&amp;Contact.LastName&amp;&quot; is &quot;&amp; IF(IsActive,&quot;&quot;,&quot;former &quot;)&amp;RelatedContact.FirstName&amp;&quot; &quot;&amp;RelatedContact.LastName &amp;&quot;&apos;s &quot;&amp; Lower(PartyRoleRelation.RoleName)&amp;&quot;.&quot;&amp;BR() &amp;
BR() &amp;
RelatedContact.FirstName&amp;&quot; &quot;&amp;RelatedContact.LastName &amp;&quot; is &quot;&amp;Contact.FirstName&amp;&quot; &quot;&amp;Contact.LastName&amp;&quot;&apos;s &quot;&amp; IF(IsActive,&quot;&quot;,&quot;former &quot;)&amp; Lower(PartyRoleRelation.RelatedRoleName)&amp;&quot;.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Explanation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>