force-app/main/default/objects/ContactContactRelation/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Used in reports and on flow data tables to present the Contact&apos;s full name.</description>
    <formula>Contact.FirstName + &quot; &quot; +  Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>