force-app/main/default/objects/ContactContactRelation/fields/Related_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact_Name__c</fullName>
    <description>Used in reports and on flow data tables to present the role&apos;s full name.</description>
    <formula>RelatedContact.FirstName + &quot; &quot; +  RelatedContact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Contact Name</label>
    <type>Text</type>
</CustomField>