force-app/main/default/objects/ContactContactRelation/fields/Relationship_Role__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Role__c</fullName>
    <formula>PartyRoleRelation.RoleName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Role</label>
    <type>Text</type>
</CustomField>