force-app/main/default/objects/ContactContactRelation/listViews/All_ContactContactRelations.listView-meta.xml
<ListView>
    <fullName>All_ContactContactRelations</fullName>
    <filterScope>Everything</filterScope>
    <label>AllContactContactRelations</label>
</ListView>